decompiler/tests/snapshots/test_tool__x86_64_callconv__func122.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  70 instrs
    0 r12 <- Ancestral { anc_name: AncestralName("stack_bottom"), reg_type: Bytes(8) }
    1 r3 <- Ancestral { anc_name: AncestralName("PF"), reg_type: Bool }
    2 r4 <- Ancestral { anc_name: AncestralName("AF"), reg_type: Bool }
    3 r5 <- Ancestral { anc_name: AncestralName("ZF"), reg_type: Bool }
    4 r6 <- Ancestral { anc_name: AncestralName("SF"), reg_type: Bool }
    5 r7 <- Ancestral { anc_name: AncestralName("TF"), reg_type: Bool }
    6 r8 <- Ancestral { anc_name: AncestralName("IF"), reg_type: Bool }
    7 r9 <- Ancestral { anc_name: AncestralName("DF"), reg_type: Bool }
    8 r10 <- Ancestral { anc_name: AncestralName("OF"), reg_type: Bool }
    9 r11 <- Ancestral { anc_name: AncestralName("RBP"), reg_type: Bytes(8) }
   10 r12 <- Ancestral { anc_name: AncestralName("RSP"), reg_type: Bytes(8) }
   11 r13 <- Ancestral { anc_name: AncestralName("RIP"), reg_type: Bytes(8) }
   12 r14 <- Ancestral { anc_name: AncestralName("RDI"), reg_type: Bytes(8) }
   13 r15 <- Ancestral { anc_name: AncestralName("RSI"), reg_type: Bytes(8) }
   14 r16 <- Ancestral { anc_name: AncestralName("RAX"), reg_type: Bytes(8) }
   15 r17 <- Ancestral { anc_name: AncestralName("RBX"), reg_type: Bytes(8) }
   16 r18 <- Ancestral { anc_name: AncestralName("RCX"), reg_type: Bytes(8) }
   17 r19 <- Ancestral { anc_name: AncestralName("RDX"), reg_type: Bytes(8) }
   18 r20 <- Ancestral { anc_name: AncestralName("R8"), reg_type: Bytes(8) }
   19 r21 <- Ancestral { anc_name: AncestralName("R9"), reg_type: Bytes(8) }
   20 r22 <- Ancestral { anc_name: AncestralName("R10"), reg_type: Bytes(8) }
   21 r23 <- Ancestral { anc_name: AncestralName("R11"), reg_type: Bytes(8) }
   22 r24 <- Ancestral { anc_name: AncestralName("R12"), reg_type: Bytes(8) }
   23 r25 <- Ancestral { anc_name: AncestralName("R13"), reg_type: Bytes(8) }
   24 r26 <- Ancestral { anc_name: AncestralName("R14"), reg_type: Bytes(8) }
   25 r27 <- Ancestral { anc_name: AncestralName("R15"), reg_type: Bytes(8) }
   26 r28 <- Ancestral { anc_name: AncestralName("ZMM0"), reg_type: Bytes(64) }
   27 r29 <- Ancestral { anc_name: AncestralName("ZMM1"), reg_type: Bytes(64) }
   28 r30 <- Ancestral { anc_name: AncestralName("ZMM2"), reg_type: Bytes(64) }
   29 r31 <- Ancestral { anc_name: AncestralName("ZMM3"), reg_type: Bytes(64) }
   30 r32 <- Ancestral { anc_name: AncestralName("ZMM4"), reg_type: Bytes(64) }
   31 r33 <- Ancestral { anc_name: AncestralName("ZMM5"), reg_type: Bytes(64) }
   32 r34 <- Ancestral { anc_name: AncestralName("ZMM6"), reg_type: Bytes(64) }
   33 r35 <- Ancestral { anc_name: AncestralName("ZMM7"), reg_type: Bytes(64) }
   34 r36 <- Ancestral { anc_name: AncestralName("ZMM8"), reg_type: Bytes(64) }
   35 r37 <- Ancestral { anc_name: AncestralName("ZMM9"), reg_type: Bytes(64) }
   36 r38 <- Ancestral { anc_name: AncestralName("ZMM10"), reg_type: Bytes(64) }
   37 r39 <- Ancestral { anc_name: AncestralName("ZMM11"), reg_type: Bytes(64) }
   38 r40 <- Ancestral { anc_name: AncestralName("ZMM12"), reg_type: Bytes(64) }
   39 r41 <- Ancestral { anc_name: AncestralName("ZMM13"), reg_type: Bytes(64) }
   40 r42 <- Ancestral { anc_name: AncestralName("ZMM14"), reg_type: Bytes(64) }
   41 r43 <- Ancestral { anc_name: AncestralName("ZMM15"), reg_type: Bytes(64) }
   42 r45 <- Ancestral { anc_name: AncestralName("arg0"), reg_type: Bytes(8) }
   43 r15 <- Get(r45)
   44 r46 <- Ancestral { anc_name: AncestralName("arg1"), reg_type: Bytes(8) }
   45 r19 <- Get(r46)
   46 r47 <- Ancestral { anc_name: AncestralName("arg2"), reg_type: Bytes(8) }
   47 r18 <- Get(r47)
   48 r48 <- Ancestral { anc_name: AncestralName("arg3"), reg_type: Bytes(8) }
   49 r20 <- Get(r48)
   50 r49 <- Ancestral { anc_name: AncestralName("arg4"), reg_type: Bytes(16) }
   51 r51 <- Part { src: r49, offset: 0, size: 8 }
   52 r50 <- ArithK(Add, r12, 8)
   53 r50 <- StoreMem { addr: r50, value: r51 }
   54 r51 <- Part { src: r49, offset: 8, size: 8 }
   55 r50 <- ArithK(Add, r12, 16)
   56 r50 <- StoreMem { addr: r50, value: r51 }
   57 r52 <- Ancestral { anc_name: AncestralName("arg5"), reg_type: Bytes(16) }
   58 r53 <- Part { src: r52, offset: 0, size: 8 }
   59 r54 <- Part { src: r28, offset: 8, size: 56 }
   60 r28 <- Concat { lo: r53, hi: r54 }
   61 r55 <- Part { src: r52, offset: 8, size: 8 }
   62 r56 <- Part { src: r29, offset: 8, size: 56 }
   63 r29 <- Concat { lo: r55, hi: r56 }
0x40137a:
   64 r45 <- Void
   65 r46 <- Part { src: r28, offset: 0, size: 8 }
   66 r45 <- Concat { lo: r45, hi: r46 }
   67 r45 <- Part { src: r45, offset: 0, size: 4 }
   68 r47 <- SetReturnValue(r45)
   69 r47 <- Control(Ret)


 --- ssa pre-xform
ssa program  70 instrs
.B0:    ;;  → Always(Return).
  (  2)  r10 <- Ancestral { anc_name: AncestralName("RSP"), reg_type: Bytes(8) }
         r26 <- Ancestral { anc_name: AncestralName("ZMM0"), reg_type: Bytes(64) }
  (  2)  r50 <- Ancestral { anc_name: AncestralName("arg4"), reg_type: Bytes(16) }
         r51 <- Part { src: r50, offset: 0, size: 8 }
         r52 <- ArithK(Add, r10, 8)
         r53 <- StoreMem { addr: r52, value: r51 }
         r54 <- Part { src: r50, offset: 8, size: 8 }
         r55 <- ArithK(Add, r10, 16)
         r56 <- StoreMem { addr: r55, value: r54 }
         r57 <- Ancestral { anc_name: AncestralName("arg5"), reg_type: Bytes(16) }
         r58 <- Part { src: r57, offset: 0, size: 8 }
         r59 <- Part { src: r26, offset: 8, size: 56 }
         r60 <- Concat { lo: r58, hi: r59 }
         r65 <- Part { src: r60, offset: 0, size: 8 }
         r66 <- Concat { lo: r64, hi: r65 }
         r67 <- Part { src: r66, offset: 0, size: 4 }
         r68 <- SetReturnValue(r67)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r10, r50, r51, r52, r53, r54, r55, r56, r57, r67, r68]
  domtree:
    BlockID(0)

 --- ssa
ssa program  70 instrs
.B0:    ;;  → Always(Return).
  (  2)  r10 <- Ancestral { anc_name: AncestralName("RSP"), reg_type: Bytes(8) }
  (  2)  r50 <- Ancestral { anc_name: AncestralName("arg4"), reg_type: Bytes(16) }
         r51 <- StructGetMember { struct_value: r50, name: "member0", size: 16 }
         r52 <- ArithK(Add, r10, 8)
         r53 <- StoreMem { addr: r52, value: r51 }
         r54 <- Part { src: r50, offset: 8, size: 8 }
         r55 <- ArithK(Add, r10, 16)
         r56 <- StoreMem { addr: r55, value: r54 }
         r57 <- Ancestral { anc_name: AncestralName("arg5"), reg_type: Bytes(16) }
         r67 <- StructGetMember { struct_value: r57, name: "member0", size: 16 }
         r68 <- SetReturnValue(r67)


 --- ast

T0: {
  [pre:RSP + 8]:* := pre:arg4.member0;
  [pre:RSP + 16]:* := pre:arg4[16 .. 8];
  ;
  return pre:arg5.member0
}
